# complete-axum-example

./: .gitignore  Cargo.toml
migrations/: 20230128230407_schema.sql
src/: lib.rs  router.rs
